# predict-the-llm

./: .gitignore  Outline.md  README.md  main.py  pyproject.toml  reference.md
scripts/: run_all_experiments.py  run_all_experiments_full.py  run_final_inference.py  run_single_experiment.py
src/config/: data_config.py  experiment_config.py  model_config.py
src/data/: data_loader.py  preprocessor.py  splitter.py
src/evaluation/: metrics.py
src/experiments/: group_a_baseline.py  group_b_tfidf_lr.py  group_c_embedding_lgb.py  group_d_feature_comparison.py  group_e_ablation.py
src/features/: base.py  embedding_features.py  statistical_features.py  tfidf_features.py
src/hpo/: base_hpo.py  grid_search.py  optuna_tpe.py  random_search.py
src/models/: base_model.py  lightgbm_model.py  logistic_regression.py
src/pipeline/: base_pipeline.py  embedding_pipeline.py  tfidf_pipeline.py
src/utils/: io_utils.py  logger.py
